# Seraphim

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  vitest.config.ts
.github/: actionlint.yaml
.github/workflows/: ci.yml  test.yml
api/: Cargo.toml  Dockerfile  rust-toolchain.toml
api/migrations/: 0001_init.sql  0002_workspace.sql  0003_repo_sources.sql  0004_db_secrets.sql  0005_config_repo_error.sql  0006_ci_feedback.sql  0006_env_vars.sql  0007_availability.sql  0008_ci_feedback.sql  0009_questions.sql  0010_env_suggestions.sql  0011_network_access.sql  0012_global_branch_template.sql  0013_usage_limits.sql  0014_post_thoughts.sql  0015_task_ticket_state.sql  0016_jira.sql  0017_repo_cascade_delete.sql  0018_global_notepad.sql  0018_task_notes.sql  0019_internal_source.sql  0019_stats_reset.sql  0021_internal_comments.sql  0023_task_blocking.sql  0024_issue_author.sql  0025_issue_webhooks.sql  0026_close_issue_on_done.sql  0027_automation_rules.sql  0028_heart_attacks.sql  0029_notification_sounds.sql  0030_merge_conflict_status.sql  0031_claude_oauth.sql  0031_task_pull_requests.sql  0033_jira_assignee_filter.sql  0034_task_target_repos.sql  0035_compose.sql  0036_railways.sql  0037_draft_railway.sql  0038_pending_placements.sql  0039_railway_idle_timeout.sql  (+8 more)
api/src/: config.rs  main.rs  secrets.rs  state.rs
api/src/automation/: mod.rs
api/src/claude/: events.rs  exec.rs  mod.rs  oauth.rs
api/src/db/: mod.rs  models.rs  queries.rs
api/src/docker/: mod.rs
api/src/git/: mod.rs
api/src/http/: attachments.rs  automation.rs  board.rs  compose.rs  data.rs  heart_attacks.rs  jira.rs  mod.rs  notepad.rs  questions.rs  railways.rs  repos.rs  screenshots.rs  settings.rs  sources.rs  sse.rs  stats.rs  suggestions.rs  tailscale.rs  tasks.rs  update.rs  webhooks.rs  workspace.rs
api/src/jira/: mod.rs
api/src/orchestrator/: availability.rs  ci_watch.rs  compose.rs  dependencies.rs  issues.rs  mod.rs  network.rs  placement.rs  prompt.rs  provision.rs  railway.rs  review.rs  subscription.rs  thoughts.rs  usage.rs
api/src/sources/: github.rs  mod.rs  types.rs
api/src/tailscale/: mod.rs
api/src/update/: mod.rs
common/: package.json
common/src/: constants.ts  fileToBase64.ts  taskIcons.ts  types.ts  writeSetupScriptFile.ts
common/src/cloning/polymorphism/: github.test.ts  github.ts
common/src/git/: schema.ts  types.ts
common/src/git/polymorphism/: Base.ts  GithubClassic.test.ts  GithubFineGrained.test.ts
common/src/issueTracking/: getIssueTracker.ts
common/src/issueTracking/polymorphism/: github.test.ts  github.ts  issueTracker.ts  jira.ts
common/src/llms/polymorphism/: codex.test.ts  codex.ts
common/src/node/: playAudioFor.test.ts  playAudioFor.ts
common/src/schema/: audioFile.ts  issueTracking.ts  task.ts  userSettings.ts
common/src/voice/: call.ts  protocol.ts  types.ts
common/src/voice/polymorphism/: base.ts  openai.ts
electron/: forge.config.ts  package.json  vite.config.ts
electron/src/: validators.ts  window.ts
electron/src/api/: express.ts  index.ts
electron/src/api/sse/: sseManager.ts
electron/src/docker/: buildImage.ts  waitForBuild.ts
electron/src/lib/: csp.ts
electron/src/tasks/: fileDiff.ts  taskInstance.ts  taskManager.ts  types.ts
frontend/: .gitignore  .yarnrc.yml  Dockerfile  components.json  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/scripts/: gen-sounds.py
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/elements/: Monaco.tsx  SearchIssueLinks.tsx  SearchIssueTrackers.tsx  SearchLlmAccounts.tsx  TaskIcon.tsx  VoiceButton.tsx  VoiceProviderInput.tsx
frontend/src/elements/buttons/: AudioFileUploadButton.tsx
frontend/src/elements/graphics/: IconNexus.tsx
frontend/src/hooks/: useTaskMessages.ts  useVoice.ts
frontend/src/hooks/lib/: voiceSession.ts
frontend/src/lib/: ansi.ts  api.ts  boardStream.ts  columnSort.ts  diff.ts  holidays.ts  json-highlight.ts  rateLimit.ts  schedule.ts  search.ts  types.ts  utils.ts
frontend/src/lib/components/: AnsiLog.svelte  BulkActionBar.svelte  Card.svelte  ColumnSort.svelte  DecisionsFeed.svelte  (+18 more)
frontend/src/pages/: Sidebar.tsx
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  accountsRoutes.ts  issueTrackingRoutes.ts  llmRoutes.ts  taskRoutes.ts  userRoutes.ts  voiceRoutes.ts  workspaceRoutes.ts
prisma/: schema.prisma
scripts/: check-control-chars.py  restart.sh  start.sh  stop.sh
tailscale/: serve.json
workspace/: Dockerfile  design-system.md  entrypoint.sh  pg-ephemeral  seraphim-ask  seraphim-comment  seraphim-draft  seraphim-followup  seraphim-screenshot  seraphim-state  seraphim-suggest  visual-checks.md  visual-regression.md
(+57 files in other folders)
